[tool.poetry]
name = "python_web_2"
version = "0.1.0"
description = "Your project description here"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Додайте сюди свої залежності, наприклад:
# requests = "^2.25.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
